# Crystals-Kyber

./: LICENSE  README.md
Alice/: CMakeLists.txt  main.c
Alice/Kyber/: aes256ctr.h  cbd.h  fips202.h  indcpa.h  kem.c  kem.h  kex.h  ntt.h  params.h  poly.c  poly.h  polyvec.c  polyvec.h  randombytes.c  randombytes.h  reduce.h  symmetric-shake.c  symmetric.h  verify.h
Alice/TCP/: Server.c  Server.h
Bob/: CMakeLists.txt  main.c
Bob/Kyber/: aes256ctr.c  aes256ctr.h  cbd.c  cbd.h  fips202.c  fips202.h  indcpa.c  indcpa.h  kem.c  kem.h  kex.c  kex.h  ntt.c  ntt.h  params.h  poly.c  poly.h  polyvec.c  polyvec.h  randombytes.h  reduce.c  reduce.h  symmetric-aes.c  symmetric.h  verify.c  verify.h
Bob/TCP/: Client.c  Client.h
Executables/: KyberClient  KyberServer
Executables/Client/: K2  K3  K4
Executables/Server/: K2  K3  K4
executables_ubuntu/: KyberClient  KyberServer
executables_ubuntu/Client/: K2  K3  K4
executables_ubuntu/Server/: K2  K3  K4
